<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.conexia.emssanar</groupId>
    <artifactId>Contratacion</artifactId>
    <version>1.1.8.3-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Contratacion</name>

    <properties>
        <primefaces-version>5.2</primefaces-version>
        <prettyfaces.version>2.0.12.Final</prettyfaces.version>
        <primefaces-extensions-version>3.2.0</primefaces-extensions-version>
        <primefaces_theme.version>1.0.10</primefaces_theme.version>
        <commons_fileupload.version>1.3</commons_fileupload.version>
        <jasig.cas.version>3.5.1</jasig.cas.version>
        <itextpdf-version>5.5.6</itextpdf-version>
        <xmlworker-version>5.5.6</xmlworker-version>
        <junit.version>4.12</junit.version>
        <junit.jupiter.version>5.5.2</junit.jupiter.version>
        <mockito.all.version>1.10.19</mockito.all.version>
        <hibernate.entitymanager.version>5.2.18.Final</hibernate.entitymanager.version>
        <hibernate-jpamodelgen.version>5.3.0.Final</hibernate-jpamodelgen.version>
        <assertj.core.version>1.7.1</assertj.core.version>
        <omnifaces.version>2.0</omnifaces.version>
        <jodatime.version>2.6</jodatime.version>
        <commons-lang3.version>3.3.2</commons-lang3.version>
        <apache.poi.version>4.1.1</apache.poi.version>
        <jwt.version>3.3.0</jwt.version>
        <jasperreports.version>6.4.0</jasperreports.version>
        <groovy-all.version>2.1.1</groovy-all.version>
        <wildfly_plugin.version>1.2.1.Final</wildfly_plugin.version>

        <!-- okhttp3 integrado con retrofit 2-->
        <squareup.okhttp3.version>3.10.0</squareup.okhttp3.version>
        <!-- Retrofit | A type-safe REST client Coomon separado -->
        <retrofit.version>2.4.0</retrofit.version>

        <one.cdifactory>1.2</one.cdifactory>
        <one.webutils>1.6</one.webutils>
        <one.exceptions>1.0</one.exceptions>
        <one.seguridadutils>1.2</one.seguridadutils>
        <notificaciones.version>1.2.0-SNAPSHOT</notificaciones.version>

        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
        <maven-war-plugin.version>3.2.3</maven-war-plugin.version>
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>

        <maven-checkstyle-plugin.version>2.5</maven-checkstyle-plugin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <rest.client.lib.version>1.0.0-SNAPSHOT</rest.client.lib.version>
        <contrataciones-commons.version>1.0.0-SNAPSHOT</contrataciones-commons.version>
    </properties>
    <modules>
        <module>Contratacion-Commons</module>
        <module>Contractual</module>
        <module>Negociacion</module>
        <module>Portafolio</module>
    </modules>
    <scm>
        <connection>scm:git:http://gitlab.cx.col/awa/contratacion-one.git</connection>
        <developerConnection>scm:git:http://gitlab.cx.col/awa/contratacion-one.git</developerConnection>
        <url>http://gitlab.cx.col/awa/contratacion-one.git</url>
        <tag>HEAD</tag>
    </scm>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-pmd-plugin</artifactId>
                    <version>3.12.0</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                    <dependencies>
                        <dependency>
                            <groupId>com.conexia.contratacion.commons</groupId>
                            <artifactId>contrataciones-commons</artifactId>
                            <version>${contrataciones-commons.version}</version>
                        </dependency>

                        <dependency>
                            <groupId>com.conexia.contratacion.rest</groupId>
                            <artifactId>rest-client-lib</artifactId>
                            <version>${rest.client.lib.version}</version>
                        </dependency>

                        <dependency>
                            <groupId>net.sourceforge.pmd</groupId>
                            <artifactId>pmd-core</artifactId>
                            <version>6.16.0</version>
                        </dependency>
                        <dependency>
                            <groupId>net.sourceforge.pmd</groupId>
                            <artifactId>pmd-java</artifactId>
                            <version>6.16.0</version>
                        </dependency>
                        <dependency>
                            <groupId>net.sourceforge.pmd</groupId>
                            <artifactId>pmd-javascript</artifactId>
                            <version>6.16.0</version>
                        </dependency>
                        <dependency>
                            <groupId>net.sourceforge.pmd</groupId>
                            <artifactId>pmd-jsp</artifactId>
                            <version>6.16.0</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <useSystemClassLoader>false</useSystemClassLoader>
                        <parallel>all</parallel>
                        <useUnlimitedThreads>true</useUnlimitedThreads>
                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>${maven-war-plugin.version}</version>
                    <configuration>
                        <failOnMissingWebXml>false</failOnMissingWebXml>
                        <webResources>
                            <resource>
                                <filtering>true</filtering>
                                <directory>src/main/webapp</directory>
                                <includes>
                                    <include>**/web.xml</include>
                                </includes>
                            </resource>
                        </webResources>
                        <warSourceDirectory>src/main/webapp</warSourceDirectory>
                        <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.wildfly.plugins</groupId>
                    <artifactId>wildfly-maven-plugin</artifactId>
                    <version>${wildfly_plugin.version}</version>
                    <configuration>
                        <skip>false</skip>
                        <force>true</force>
                        <hostname>${hostname.deploy}</hostname>
                        <port>9990</port>
                        <username>${username.deploy}</username>
                        <password>${password.deploy}</password>
                    </configuration>
                    <executions>
                        <execution>
                            <id>undeploy</id>
                            <phase>clean</phase>
                            <goals>
                                <goal>undeploy</goal>
                            </goals>
                            <configuration>
                                <ignoreMissingDeployment>true</ignoreMissingDeployment>
                            </configuration>
                        </execution>
                        <execution>
                            <phase>install</phase>
                            <goals>
                                <goal>deploy</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <profiles>
        <profile>
            <id>deploy</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <hibernate.show_sql>true</hibernate.show_sql>
                <hibernate.format_sql>true</hibernate.format_sql>
                <hibernate.generate_statistics>false</hibernate.generate_statistics>
            </properties>
        </profile>

        <profile>
            <id>develop</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <hibernate.format_sql>false</hibernate.format_sql>
                <cas.server>https://desarrollo-emssanar.conexia.com.co:8443/cas</cas.server>
                <host.verifier>192.168.2.31</host.verifier>
                <cas.server.verifier>https://desarrollo-emssanar.conexia.com.co:8443/cas</cas.server.verifier>
                <principal.server>https://localhost:8443</principal.server>
                <server-web-service-negociacion>https://localhost:8443</server-web-service-negociacion>
                <redirect.server>/</redirect.server>
                <upload.directory>/home/jsanchez@CX.COL/files_one</upload.directory>
            </properties>
        </profile>
    </profiles>
    <repositories>
		<!-- Repositories -->
		<repository>
			<id>releases</id>
			<url>https://devtools.conexia.com.ar/archiva/repository/releases/</url>
		</repository>
		<repository>
			<id>snapshots</id>
			<url>https://devtools.conexia.com.ar/archiva/repository/snapshots</url>
		</repository>
		<repository>
			<id>internal</id>
			<url>https://devtools.conexia.com.ar/archiva/repository/internal</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
</project>
